Commented out SVG on title sprite pending resolution of scaling issue on IE10/11

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -431,7 +431,7 @@ a {
     left: 960px; }
 
   .program-callout:nth-child(5) {
-    left: 2430px; }
+    left: 2970px; }
 
   .program-callout:nth-child(6) {
     left: 1654px; }
